# tiny-autodiff

./: .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp
include/: nn.h  tiny_autodiff.h
